k8s/production/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: mgmt
  labels:
    app: prometheus

spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      serviceAccountName: prometheus

      containers:
      - name: prometheus
        image: prom/prometheus
        imagePullPolicy: Always
        ports:
        - containerPort: 9090

        volumeMounts:
        - name: prometheus-config
          mountPath: "/etc/prometheus"
          readOnly: true

      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config

---

apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: mgmt
spec:
  selector:
    app: prometheus
  ports:
    - port: 80
      targetPort: 9090
