k8s/production/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: betabooru
  namespace: danbooru
spec:
  rules:
    - host: betabooru.donmai.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: betabooru
                port:
                  number: 80
  tls:
    - hosts:
      - betabooru.donmai.us
      secretName: donmai-us-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deepdanbooru
  namespace: danbooru
spec:
  rules:
    - host: deepdanbooru.donmai.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deepdanbooru
                port:
                  number: 80
  tls:
    - hosts:
      - deepdanbooru.donmai.us
      secretName: donmai-us-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autotagger
  namespace: danbooru
spec:
  rules:
    - host: autotagger.donmai.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autotagger
                port:
                  number: 80
  tls:
    - hosts:
      - autotagger.donmai.us
      secretName: donmai-us-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danbooru
  namespace: danbooru
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: 10
    nginx.ingress.kubernetes.io/limit-burst-multiplier: 5
    nginx.ingress.kubernetes.io/server-alias: "donmai.us,www.donmai.us,safebooru.donmai.us,shima.donmai.us,saitou.donmai.us,kagamihara.donmai.us,sonohara.donmai.us,hijiribe.donmai.us"

spec:
  rules:
    - host: danbooru.donmai.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danbooru
                port:
                  number: 80

  tls:
    - hosts:
      - danbooru.donmai.us
      secretName: donmai-us-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danbooru-images
  namespace: danbooru
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "cdn0.donmai.us,cdn1.donmai.us,raikou1.donmai.us,raikou2.donmai.us,raikou3.donmai.us,raikou4.donmai.us"

spec:
  rules:
    - host: cdn.donmai.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: danbooru-images
                port:
                  number: 80

  tls:
    - hosts:
      - cdn.donmai.us
      secretName: donmai-us-tls

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz
  namespace: signoz
spec:
  rules:
    - host: signoz.donmai.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signoz
                port:
                  number: 8080

  tls:
    - hosts:
      - signoz.donmai.us
      secretName: donmai-us-tls
